<resources>
    <string name="app_name">Golden Stars</string>
    <string name="welcome">Welcome!</string>
    <string name="first_info">Choose two numbers. One for how many dots and one for number of dots to count for each new line.</string>
    <string name="render_button">Render</string>
    <string name="skips_hint">Number of skips</string>
    <string name="dots_hint">Number of dots</string>
    <string name="more_info_button">More info</string>
    <string name="details_success">Congratulations! You made a %1$d-pointed star in one stroke!</string>
    <string name="details_fail">It is not possible to draw a %1$d-pointed star in one stroke.</string>
    <string name="details_is_prime">Because %1$d is a prime you can actually choose any movement number and still get a %1$d-pointed star.</string>
    <string name="details_info">It is possible to draw %2$d different %1$d-pointed stars in one stroke. Mirrored stars are not counted. For example, moving 2 or 3 points at the same time to get a 5-pointed start is the same solution.</string>
    <string name="details_help">The following move numbers can be used to achieve a %1$d-pointed star:</string>
    <string name="details_fair">With %1$d dots available, moving %2$d dots at a time results in a %3$d-pointed star.</string>
    <string name="help">Help</string>
    <string name="help_details">This tiny app renders an N-pointed regular star (if possible) using only straight lines without leaving the surface with the pen. The rules are that it starts in one point, and then draws straight lines always moving the same amount of dots at a time, until it comes back to the dot it started drawing from. The classic example is the 5-pointed golden star, where you move 2 dots while drawing. After render you can choose to show more details about which stars can be drawn given that amount of dots. For more mathematical details, search on the Internet for GCD (Greatest Common Divisor).</string>
</resources>